--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.box{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 label{
   display: block;
   margin-bottom: 15px;
