--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@
 }
 label{
   display: block;
-  margin-bottom: 15px;
+  margin-bottom: 1rem;
+  font-weight: bolder;
 }
 input {
-  font-size: 1.2rem;
-  padding: 10px;
-  margin-bottom: 20px;
+  font-size: 1.5rem;
+  padding: 5px;
+  margin-bottom: 30px;
 }
 .checkbox {
   display: grid;
@@ -35,4 +36,16 @@ h1{
 }
 body{
   background-image: linear-gradient(to right, rgb(20, 147, 220), rgb(17, 54, 71))
+}
+
+.invalido {
+  border-color: rgb(242, 25, 25);
+}
+
+.erro {
+  text-decoration: none;
+  font-size: small;
+  font-weight: lighter;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-style: italic;
 }
